--- a/index.html
+++ b/index.html
@@ -6,43 +6,42 @@
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<title>BakOneTemplate</title>
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="vendor/fontawesome/css/all.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<body data-spy="scroll" data-target=".navbar">
-	
+<body>
+	<header>
+		<nav class="navbar navbar-expand-md navbar-light">
+			<a class="navbar-brand" href="#">
+				<img src="images/logo.png" alt="">
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#home">HOME</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#portfolio">PORTFOLIO</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" href="#about">ABOUT</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#contact">CONTACT</a>
+					</li>
+				</ul>
+
+			</div>
+		</nav>
+	</header>
 	<main>
 		<!-- HOME -->
 		<section id="home">
-			<header>
-				<nav class="navbar navbar-expand-md navbar-light">
-					<a class="navbar-brand" href="#">
-						<img src="images/logo.png" alt="">
-					</a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav ml-auto">
-							<li class="nav-item">
-								<a class="nav-link active" href="#home">HOME</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#portfolio">PORTFOLIO</a>
-							</li>
-
-							<li class="nav-item">
-								<a class="nav-link" href="#about">ABOUT</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#contact">CONTACT</a>
-							</li>
-						</ul>
-
-					</div>
-				</nav>
-			</header>
 			<div class="home container-fluid text-center">
 				<h1>We Build <strong>Brand</strong></h1>
 				<p>
@@ -231,10 +230,10 @@
 						<div class="box">
 							<img src="images/person1.jpg" alt="Personal 1">
 							<div class="overlay">
-								<a href="#"><i class="fab fa-facebook-f"></i></a>
-								<a href="#"><i class="fab fa-twitter"></i></a>
-								<a href="#"><i class="fab fa-google-plus-g"></i></a>
-								<a href="#"><i class="fab fa-dribbble"></i></a>
+								<a href="#"><i class='bx bxl-facebook'></i></a>
+								<a href="#"><i class='bx bxl-twitter' ></i></a>
+								<a href="#"><i class='bx bxl-google-plus' ></i></a>
+								<a href="#"><i class='bx bxl-dribbble' ></i></a>
 							</div>
 						</div>
 						
@@ -255,10 +254,10 @@
 						<div class="box">
 							<img src="images/person2.jpg" alt="Personal 2">
 							<div class="overlay">
-								<a href="#"><i class="fab fa-facebook-f"></i></a>
-								<a href="#"><i class="fab fa-twitter"></i></a>
-								<a href="#"><i class="fab fa-google-plus-g"></i></a>
-								<a href="#"><i class="fab fa-dribbble"></i></a>
+								<a href="#"><i class='bx bxl-facebook'></i></a>
+								<a href="#"><i class='bx bxl-twitter' ></i></a>
+								<a href="#"><i class='bx bxl-google-plus' ></i></a>
+								<a href="#"><i class='bx bxl-dribbble' ></i></a>
 							</div>
 						</div>
 						<div class="box-info">
@@ -278,10 +277,10 @@
 						<div class="box">
 							<img src="images/person3.jpg" alt="Personal 3">
 							<div class="overlay">
-								<a href="#"><i class="fab fa-facebook-f"></i></a>
-								<a href="#"><i class="fab fa-twitter"></i></a>
-								<a href="#"><i class="fab fa-google-plus-g"></i></a>
-								<a href="#"><i class="fab fa-dribbble"></i></a>
+								<a href="#"><i class='bx bxl-facebook'></i></a>
+								<a href="#"><i class='bx bxl-twitter' ></i></a>
+								<a href="#"><i class='bx bxl-google-plus' ></i></a>
+								<a href="#"><i class='bx bxl-dribbble' ></i></a>
 							</div>
 						</div>
 						<div class="box-info">
